Try fixing the images for the weekly dev pods post

--- a/weekly-dev-pods.mdx
+++ b/weekly-dev-pods.mdx
@@ -1,7 +1,6 @@
 ---
 title: The 5 Developer Podcasts I Listen to Every Week
-published: 17 Apr 2024
-indexed: true
+date: 17 Apr 2024
 tags:
   - Podcasts
   - Development
@@ -11,26 +10,18 @@ Podcasts have played a critical role in my development as a software engineer. W
 
 Today, several years into my career, my podcast habit continues. Now it's more focused on specific technology interests as well as _how_ people think about and approach their work.
 
+## The Changelog
+
+![The Changelog Podcast](https://supercast-storage-assets.b-cdn.net/channel/486/artwork/medium-140f20cbf05b6963c5e12a3ba97823a3.png)
+
+
+This feed is a collection of podcasts that make up the bulk of my podcast listening time each week. I pay for the "++" subscription to support the team behind these podcasts. It's certainly a worthwhile investment for the quality and amount of insights I've received from The Changelog over the years.
+
+They recently brought back my favorite podcast to the feed, [Ship It!](https://changelog.com/shipit), which covers deployment and system architecture at scale. I love hearing how others are tackling the same problems I deal with everyday at work and getting inspired to try different approaches and workflows.
+
+Good first episode: [Beyond Heroku to Muse](https://changelog.com/podcast/514)
+
 <div class="mx-auto w-full max-w-2xl flex flex-col gap-8 mb-8">
-
-  <div class="flex flex-col sm:flex-row sm:gap-8">
-    <img
-      src="https://supercast-storage-assets.b-cdn.net/channel/486/artwork/medium-140f20cbf05b6963c5e12a3ba97823a3.png"
-      alt="The Changelog Podcast"
-      class="rounded sm:w-44 sm:h-44 aspect-square"
-    />
-    <div class="-mt-4">
-      ## [The Changelog (++)](https://changelog.com/)
-
-      This feed is a collection of podcasts that make up the bulk of my podcast listening time each week. I pay for the "++" subscription to support the team behind these podcasts. It's certainly a worthwhile investment for the quality and amount of insights I've received from The Changelog over the years.
-
-      They recently brought back my favorite podcast to the feed, [Ship It!](https://changelog.com/shipit), which covers deployment and system architecture at scale. I love hearing how others are tackling the same problems I deal with everyday at work and getting inspired to try different approaches and workflows.
-
-      Good first episode: [Beyond Heroku to Muse](https://changelog.com/podcast/514)
-
-    </div>
-
-  </div>
 
   <div class="flex flex-col sm:flex-row sm:gap-8">
     <img
